--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "diary.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,8 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
